create a header with a navi bar to scroll through the app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <header class="header">
+      <%= render "devise/shared/navbar" %>
+    </header>
     <%= yield %>
   </body>
 </html>
