--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,47 +1,19 @@
-<div class="container-recipe-list">
-    <div class="card-recipe">
-      <div class="card-body">
-        <article class="article-recipe">
-          <div>
-            <h1>Recipe 1</h1>
-            <button class="btn-card-recipe">Remove Recipe</button>
-          </div>
-          <div class="col-8">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quis veritatis quisquam distinctio perferendis harum eligendi?
-            </p>
-          </div>
-        </article>
-      </div>
-    </div>
-    <div class="card-recipe">
-      <div class="card-body">
-        <article class="article-recipe">
-          <div>
-            <h1>Recipe 2</h1>
-            <button class="btn-card-recipe">Remove Recipe</button>
-          </div>
-          <div class="col-8">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quis veritatis quisquam distinctio perferendis harum eligendi?
-            </p>
-          </div>
-        </article>
-      </div>
-    </div>
-    <div class="card-recipe">
-      <div class="card-body">
-        <article class="article-recipe">
-          <div>
-            <h1>Recipe 3</h1>
-            <button class="btn-card-recipe">Remove Recipe</button>
-          </div>
-          <div class="col-8">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quis veritatis quisquam distinctio perferendis harum eligendi?
-            </p>
-          </div>
-        </article>
-      </div>
-    </div>
+<section>
+  <div>
+    <%= link_to "Add Recipe", new_recipe_path %>
   </div>
+
+  <% @recipes.each do |recipe| %>
+    <div>
+      <div>
+        <%= link_to recipe.name, recipe_path(recipe) %>
+        <% if recipe.user == current_user %>
+          <%= button_to 'Remove', recipe, method: :delete %>
+        <% end %>
+      </div>
+      <div>
+        <p> <%= recipe.description %></p>
+      </div>
+    </div>
+  <% end %>
+</section>
