--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -7,8 +7,10 @@
       <div class="card-body-public-recipe">
         <div class="container-list-public-recipe">
           <div>
+          <%= link_to recipe_path(recipe) do %>
             <h3><%= recipe.name %></h3>
             <span>By: <%= recipe.user.name %></span>
+          <% end %>
           </div>
           <div class="price-container-public-recipe">
             <p>
