--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,6 +2,7 @@
   <%= link_to "Add Recipe", new_recipe_path, class: "btn-add-recipe" %>
   <% @recipes.each do |recipe| %>
     <div class="card-recipe-list">
+    <%= link_to recipe_path(recipe) do %>
       <div class="card-body-recipe-list">
         <article class="article-recipe-list">
           <div class="little-contaienr-recipe-list">
@@ -15,6 +16,7 @@
           </div>
         </article>
       </div>
+    <% end %> 
     </div>
   <% end %>
   </div>
