--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -22,7 +22,7 @@
               <td><%= food.measurement_unit %></td>
               <td><%= food.price %></td>
               <td>
-                   <%= link_to 'Delete', food_path(food), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn-delete' %>
+                   <%= button_to "Delete", food_path(food), method: :delete, data: { turbo_method: :delete, confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, class: 'btn-delete-food' %>
               </td>
             </tr>
           <% end %>
