add deletion and update home

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,36 @@
-<h1>Welcome <%= current_user.name %>!</h1>
-<p>Here are some of our recipes:</p>
+<main class="main-home">
+  <section class="main-section-home">
+    <div>
+      <div>
+        <h1 class="title-home">Welcome <%= current_user.name %>!</h1>
+        <p>
+          <a href="<%= foods_path %>" class="btn-go-to-foods">Foods</a>
+          <a href="<%= recipes_path %>" class="btn-go-to-recipes">Recipes</a>
+        </p>
+      </div>
+    </div>
+  </section>
 
-<ul>
-  <%
-=begin%>
- <% @recipes.each do |recipe| %>
-    <li><%= link_to recipe.name, recipe_path(recipe) %></li>
-  <% end %> 
-<%
-=end%>
-</ul>
-
-<p>Don't see what you're looking for? Search for a recipe:</p>
-
-<%
-=begin%>
- <%= form_tag recipes_path, method: :get do %>
-  <%= text_field_tag :search, params[:search] %>
-  <%= submit_tag "Search", name: nil %>
-<% end %> 
-<%
-=end%>
+    <div class="container-list-home">
+      <div">
+        <% @foods.each do |food| %>
+          <div>
+            <div class="card-list-home">
+              <div class="card-body-list-home">
+                <p class="card-text-list-home">
+                  <%= link_to food.name, recipe_path(food), class: "text"  %>
+                </p>
+                <div class="container-btn-list-home">
+                  <div class="btn-group">
+                    <button type="button" class="btn-view">View</button>
+                    <button type="button" class="btn-edit">Edit</button>
+                  </div>
+                  <small class="text-muted">9 mins</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+</main>
