--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -139,10 +139,19 @@ a:hover{
   height: 8px;
   padding: 15px;
   margin-left: 25px;
+  background-color: #121920;
+}
+
+.dropdown-item{
+  padding-bottom: 5px;
 }
 
 .dropdown-menu{
   list-style: none;
+}
+
+.dropdown-menu li{
+  padding-bottom: 2px;
 }
 
 .span-log-out{
@@ -151,3 +160,57 @@ a:hover{
   align-items: center;
   justify-content: center;
 }
+
+.container-shopping-list{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title-shopping-list{
+  font-family: Arial, Helvetica, sans-serif;
+  color: #D0D3D4;
+}
+
+.label-shopping-list{
+  font-family: Arial, Helvetica, sans-serif;
+  color: #D0D3D4;
+  padding: 20px;
+}
+
+.table-shopping-list{
+  font-family: Arial, Helvetica, sans-serif;
+  color:#ffffff;
+  border: 3px #121920 solid;
+  margin: 40px;
+  width: 200px;
+  border-radius: 8px;
+  background-color: #283847;
+}
+
+tr{
+  display: flex;
+  justify-content: center;
+  flex-direction: rox;
+  width: 450px;
+  align-items: center;
+}
+
+th{
+  width: 45%;
+  padding: 3px;
+  background-color: #46515c;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+td{
+  text-align: center;
+  width: 45%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+}
+
