--- a/app/views/shopping_lists/index.html.erb
+++ b/app/views/shopping_lists/index.html.erb
@@ -11,10 +11,10 @@
       <div>
         <table class="table-shopping-list">
           <thead class="thead-shopping-list">
-            <tr>
-              <th>Food</th>
-              <th>Quantity</th>
-              <th>Value</th>
+            <tr class="tr-shopping">
+              <th class="th-shopping">Food</th>
+              <th class="th-shopping">Quantity</th>
+              <th class="th-shopping">Value</th>
             </tr>
           </thead>
           <tbody>
