--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,7 +25,7 @@ body{
   align-items: center;
   border-radius: 6px;
   background-color: #34495E;
-  height: 550px;
+  height: 950px;
 }
 
 h2{
@@ -289,6 +289,39 @@ td{
   background-color: rgb(59, 58, 58);
   text-decoration: none;
   border: 1px solid rgb(218, 216, 216);
+}
+
+.card-recipe-list{
+  border: 1px solid rgb(218, 216, 216);
+  margin: 15px;
+  display: flex;
+  flex-direction: row;
+  width: 500px;
+  border-radius: 5px;
+  background-color: #183a46;
+  padding-left: 15px;
+  height: 100px;
+}
+
+.article-recipe-list{
+  display: flex;
+  flex-direction: row;
+}
+
+.recipe-description{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  padding: 15px;
+}
+
+.little-contaienr-recipe-list{
+  width: 145px;
+  height: 95px;
+}
+
+.btn-remove-recipe:hover{
+ background-color: #51585f;
+ cursor: pointer;
 }
 
 
