--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -363,4 +363,29 @@ td{
   width: 175px;
 }
 
+.card-form-food{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#new_food {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  color: #ffffff;
+}
+
+#new_food div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 5px;
+}
+
+#new_food div input{
+  margin: 5px;
+}
+
 
