--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,7 +3,8 @@
     <div>
       <% if current_user == @recipe.user %>
         <%= form_with model: @recipe, method: :patch, class: "public-form" do |form| %>
-          <div>
+        <h1 class="card-title-info-recipes"><%= @recipe.name %></h1>
+          <div class="container-switch">
             <label class="switch">
               <input type="checkbox" <%= 'checked' if @recipe.public %> onchange="togglePublic(this)">
               <span class="slider"></span>
@@ -16,15 +17,10 @@
       
 
       <div class="card-info-recipes">
-        <img class="card-img" src="" alt="food illustration">
         <div class="card-body-info-recipes">
-          <h1 class="card-title-info-recipes"><%= @recipe.name %></h1>
-          <p class="card-text-info-recipes">by <%= @recipe.user.name %></p>
-          <p class="card-text-info-recipes"><%= @recipe.description %></p>
-
           <div class="mini-container">
             <div class="mini-container1">
-              <h2 class="prep-time-title">Prep time</h2>
+              <h2 class="prep-time-title">Preparation time:</h2>
               <div class="mini-container2">
                 <% if @preparation_time_hours > 0 %>
                   <%= "#{@preparation_time_hours} hr" %>
@@ -35,7 +31,7 @@
               </div>
             </div>
             <div class="mini-container3">
-              <h2 class="cooking-time-title">Cook time</h2>
+              <h2 class="cooking-time-title">Cooking time:</h2>
               <div class="mini-container4">
                 <% if @cooking_time_hours > 0 %>
                   <%= "#{@cooking_time_hours} hr" %>
@@ -45,6 +41,7 @@
                 <% end %>
               </div>
             </div>
+            <p class="card-text-info-recipes"><%= @recipe.description %></p>
           </div>
         </div>
       </div>
@@ -59,7 +56,7 @@
       <div class="-container-table-show-recipe">
         <table class="table-show-recipe">
           <thead class="thead-show-recipe">
-            <tr>
+            <tr class="tr-show-recipe">
               <th class="th-show-recipe">Food</th>
               <th class="th-show-recipe">Quantity</th>
               <th class="th-show-recipe">Value</th>
@@ -68,7 +65,7 @@
           </thead>
           <tbody>
             <% @recipe.recipe_foods.each do |recipe_food| %>
-              <tr>
+              <tr class="tr-show-recipe">
                 <td class="td-show-recipe"><%= recipe_food.food.name %></td>
                 <td class="td-show-recipe"><%= recipe_food.quantity %></td>
                 <td class="td-show-recipe"><%= recipe_food.total_price %></td>
